# COMPLAT

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SETUP_ENVIRONMENT.md  build_exe.ps1  complat-ui.cmd  complat.cmd  pyproject.toml  requirements.txt  setup.ps1
docs/: UPGRADES.md
src/complat/: __init__.py
src/complat/application/: cancellation.py  errors.py  ports.py  use_cases.py
src/complat/assets/: __init__.py
src/complat/domain/: entities.py  services.py
src/complat/infrastructure/: filesystem.py  zip_writer.py
src/complat/presentation/: assets.py  cli.py  composition.py  pyside_app.py
src/complat/presentation/pyside/: __init__.py  controller.py  main_window.py  table_models.py  workers.py
tests/: test_name_matcher.py  test_zip_batches.py
