[project]
name = "complat"
version = "0.1.0"
description = "Split selected files into multiple size-limited zip parts."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PySide6-Essentials>=6.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]
build = [
    "pyinstaller>=6.0",
]

[project.scripts]
complat = "complat.presentation.cli:main"
complat-ui = "complat.presentation.pyside_app:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
complat = ["assets/*"]
